<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="resenahoteles">
    Nuestro objetivo es brindarte una amplia oferta en Hoteles y una herramienta de comparación de viajes
    de última generación para que la planificación sea más fácil que nunca.
</string>

    <string name="resenarestaurantes">
"Descubre restaurantes  excepcionales donde la cocina de calidad y el ambiente encantador
        se unen para ofrecerte una experiencia gastronómica inolvidable. ¡Una combinación perfecta de sabor y ambiente!"
    </string>

    <string name="resenasitios">
"Descubre increíbles sitios turísticos. Desde monumentos históricos hasta paisajes impresionantes, estos lugares te sorprenderán.
        ¡Una experiencia única llena de belleza y encanto!"
    </string>

    <string name="opcion1"> Ingles
    </string>

    <string name="opcion2"> Español
    </string>

    <string name="opcion3"> Italiano
    </string>

    <string name="opcion4"> Acerca de
    </string>

    <string name="usuario">Usuario
    </string>

    <string name="contraseña">Contraseña
    </string>

    <string name="INGRESO">INGRESAR
    </string>

    <string name="Bienvenido">BIENVENIDO
    </string>

    <string name="resenaLina">
        Soy una mujer de
        31 años, me encuentro en
        la etapa de estudiante.
        Estoy comprometida con
        mi educacion y me
        esfuerzo mucho en alcanzar mis
        metas academicas y profesionales.
        Como mujer, enfrento desafios
        y oportunidades unicas en
        mi vida cotidiana.
    </string>

    <string name="hoteles">hoteles
    </string>

    <string name="restaurantes">restaurantes
    </string>

    <string name="sitiosturisticos">sitios turisticos
    </string>

    <string name="CONTACTO"> CONTACTO
    </string>

    <string name="Telefono"> Telefono: 3222555127
    </string>

    <string name="Platorecomendado"> PLATO RECOMENDADO
    </string>

    <string name="Platorecomendadotexto"> El filet mignon, un corte de carne tierno y jugoso,
        se extrae del lomo, es un lujo culinario con marmoleado y sabor excepcionales.
        Delicioso y sofisticado.
    </string>

    <string name="Resenaampliandohotel"> "Hotel Glamping en Guatapé:
        Encanto campestre, lujo natural, escapada perfecta.
        Naturaleza y comodidad en armonía"
    </string>

    <string name="Reservar">Reservar
    </string>

    <string name="Resenaampliandorestaurante"> "Restaurante Oregano en Guatape:
        la deliciosa cocina colombiana, las vistas panoramicas al lago y la calida hospitalidad lo convierten en una visita obligada"
    </string>

    <string name="Resenaampliandoturismo"> Guatape, un pueblo colombiano de cuento de hadas,
        deslumbra con sus vibrantes zocalos, historia colorida y ambiente acogedor. ¡Visitarlo es magico!
    </string>

    <string name="COMENTARIO">COMENTARIO
    </string>

    <string name="Calificacion">CALIFICACIÓN
    </string>

</resources>