<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmpliandoRestaurantes">


    <TextView
        android:id="@+id/nombreampliandorestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.05"
        android:textSize="27dp"
        android:textStyle="bold"
        android:text="RESTAURANTE OREGANO"
        />

    <ImageView
        android:id="@+id/fotoampliandorestaurantes"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/restauranteoregano"
        app:layout_constraintTop_toBottomOf="@+id/nombreampliandorestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="fitXY"
        app:layout_constraintVertical_bias="0.1"
        />

    <TextView
        android:id="@+id/precioampliandorestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fotoampliandorestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintHorizontal_bias="0.1"
        android:text="$250.000 COP - $450.000 COP"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/telefonoampliandorestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/precioampliandorestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintHorizontal_bias="0.1"
        android:text="@string/Telefono"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/platorecomendadoampliando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/telefonoampliandorestaurante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        android:text="@string/Platorecomendado"
        android:textSize="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/platorecomendadotextoampliando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/telefonoampliandorestaurante"
        app:layout_constraintStart_toEndOf="@id/platorecomendadoampliando"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.09"
        android:text=""
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/nombreplatorecomendadotexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/telefonoampliandorestaurante"
        app:layout_constraintStart_toEndOf="@id/platorecomendadoampliando"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.09"
        android:text=""
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/resenaampliandorestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/precioampliandorestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.6"
        android:text="@string/resenarestaurantes"
        android:textSize="19dp"
        />

    <Button
        android:id="@+id/botonampliandohote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="110dp"
        android:background="@color/color6"
        android:text="@string/Reservar"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resenaampliandorestaurante"
        app:layout_constraintVertical_bias="0.21" />
</androidx.constraintlayout.widget.ConstraintLayout>