<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmpliandoTurismo">

    <TextView
        android:id="@+id/nombreampliandositios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="TOUR PUEBLO GUATAPE"
        app:layout_constraintVertical_bias="0.04"
        app:flow_firstHorizontalBias="0.1"
        android:textSize="27dp"
        android:textColor="@color/color6"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/fotoampliandohotel"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:src="@drawable/fotositiost1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreampliandositios"
        app:layout_constraintVertical_bias="0.05"
        android:scaleType="fitXY"
        android:layout_marginHorizontal="10dp"
        />

    <ImageView
        android:id="@+id/fotoampliandositios2"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginHorizontal="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/fotositios111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoampliandohotel"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/precioampliandositios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fotoampliandositios2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintHorizontal_bias="0.7"
        android:text="$200.000 COP -$400.000 COP"
        android:textColor="@color/color1"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/contactoampliandositios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nombreampliandositios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintHorizontal_bias="0.85"
        android:text="@string/CONTACTO"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/color6"
        />

    <TextView
        android:id="@+id/telefonoampliandositios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3204563215"
        android:textColor="@color/color1"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactoampliandositios"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/comentariosampliandositios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/COMENTARIO"
        android:textColor="@color/color6"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactoampliandositios"
        app:layout_constraintVertical_bias="0.1"
        />

    <TextView
        android:id="@+id/textocomentariosampliandositios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pueblo encantador"
        android:textColor="@color/color1"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactoampliandositios"
        app:layout_constraintVertical_bias="0.15"
        />

    <TextView
        android:id="@+id/calificacionsampliandositios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calificacion"
        android:textColor="@color/color6"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactoampliandositios"
        app:layout_constraintVertical_bias="0.25"
        />

    <ImageView
        android:id="@+id/estrellasfotoampliandositios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/estrellas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="60dp"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calificacionsampliandositios"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth="100dp" />

    <TextView
        android:id="@+id/textocalificacionsampliandositios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4.5"
        android:textColor="@color/color6"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactoampliandositios"
        app:layout_constraintVertical_bias="0.3"
        />

    <TextView
        android:id="@+id/resenaampliandositios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Resenaampliandoturismo"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precioampliandositios"
        app:layout_constraintVertical_bias="0.199"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/botonampliandositios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="110dp"
        android:background="@color/color6"
        android:text="@string/Reservar"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resenaampliandositios"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>