<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context=".Login">
    
    <ImageView
        android:id="@+id/icono"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/loginapp"
        app:layout_constraintVertical_bias="0.09"
        app:layout_constraintWidth="300dp"
        app:layout_constraintHeight="120dp"/>

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:layout_margin="30dp"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/icono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:textSize="40dp"
        android:textColor="@color/color6" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contraseña"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        android:textSize="40dp"
        android:textColor="@color/color6" />

    <ImageView
        android:id="@+id/iconoface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/botoningreso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iconogoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/logofacebook"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth="100dp"
        app:layout_constraintHeight="100dp"/>

    <ImageView
        android:id="@+id/iconogoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/botoningreso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/logogoogle"
        app:layout_constraintVertical_bias="0.5"
       app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth="70dp"
        app:layout_constraintHeight="80dp"/>

    <ImageView
        android:id="@+id/iconogit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/botoningreso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/logogithub"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintWidth="100dp"
        app:layout_constraintHeight="80dp"/>

    <Button
        android:id="@+id/botoningreso"
        android:text="@string/INGRESO"
        android:textSize="30dp"
        android:gravity="center"
        android:background="@color/color6"
        android:textColor="@color/color1"
        android:layout_marginHorizontal="70dp"
        app:layout_constraintTop_toBottomOf="@+id/contraseña"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>